--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html,body{
     transform: translate(-50%,-50%) scale(0);
 }
 #nav1{
-    width: 100%;
+    width: 100vw;
     height: 100px;
     /* background-color: #aa1515; */
     display: flex;
@@ -35,6 +35,7 @@ html,body{
     z-index: 9;
     /* position: relative; */
 }
+
 .logo svg{
     fill: #000;
     height: 65px;
@@ -54,13 +55,13 @@ html,body{
     font-size: 34px;
 }
 #cart{
-    width: 10%;
+    width: 8rem;
     height: 40px;
     display: flex;
     background-color: #fff;
     align-items: center;
     justify-content: space-between;
-    padding: 5px 20px;
+    padding: 5px 15px;
     margin-top: 20px;
     border: none;
     border-radius: 30px;
@@ -75,6 +76,7 @@ html,body{
     position: relative;
 }
 #nav2{
+    position: relative;
     width: 35%;
     height: 70px;
     /* background-color: rgb(141, 107, 67); */
@@ -103,6 +105,7 @@ html,body{
     letter-spacing: -5px;
     text-align: center;
 }
+
 #page2{
     width: 100%;
     height: 100vh;
@@ -129,7 +132,8 @@ html,body{
     transform: translate(-50%,-50%);
 }
 #page2 img{
-    height: 100%;
+    width: 50vw;
+    height: 100vh;
     object-fit: cover;
     /* cursor: none; */
 }
@@ -139,7 +143,7 @@ html,body{
     margin-top: 50px;
 }
 .good{
-    width: 96%;
+    width: 96vw;
     height: 20px;   
     border-bottom: 1px solid black;
     display: flex;
@@ -198,18 +202,13 @@ html,body{
     z-index: 9;
     transition: all ease 0.1s;
 }
-/* .elem2:hover{
-    opacity: 1;
-    transition: all ease-in-out 0.3s;
-} */
-
 .elem:hover{
-    .elem2{
-        opacity: 1;
-    }
     padding-bottom: 200px;
     transition: all ease-in-out 0.3s;
     border-radius: 35px;
+    .elem2{
+        opacity: 1;
+    }
 }
 .text i{
     font-size: 9px;
@@ -274,8 +273,8 @@ html,body{
 }
 
 .product{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     /* background-color: blueviolet; */
     display: flex;
     align-items: center;
@@ -331,11 +330,11 @@ html,body{
     margin-bottom: 50px;
 }
 #page5{
-    width: 100%;
+    width: 100vw;
     min-height: 100vh;
 }
 #feature{
-    width: 100%;
+    width: 100vw;
     height: 160px;
     margin-top: 60px;
     display: flex;
@@ -395,15 +394,15 @@ html,body{
     padding-left: 30px;
 }
 #impact{
-    width: 96%;
-    height: 100%;
+    width: 96vw;
+    height: 100vh;
     display: flex;
     /* align-items: center; */
     justify-content: center;
 }
 .our{
-    width: 40%;
-    height: 100%;
+    width: 40vw;
+    height: 100vh;
     padding-right: 180px;
 }
 .our h1{
@@ -427,8 +426,8 @@ html,body{
 }
 
 .images{
-    width: 60%;
-    height: 100%;
+    width: 60vw;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -437,7 +436,8 @@ html,body{
     margin-bottom: 80px;
 }
 .images img{
-    height: 600px;
+    width: 30vw;
+    height: 40vw;
 }
 #email{
     width: 96%;
@@ -473,7 +473,7 @@ html,body{
     min-height: 100vh;
 }
 
-#info{
+#about{
     display: flex;
     /* align-items: center; */
     justify-content: space-between;
@@ -493,10 +493,11 @@ html,body{
     opacity: 0.5;
 }
 
-#info svg{
-    width: 50%;
-    height: 70%;
+#about svg{
+    width: 20%;
+    height: 40%;
     fill: #000;
+    margin-bottom: 20px;
 } 
 .faq h2{
     font-size: 1vw;
@@ -531,4 +532,205 @@ html,body{
     margin-top: 100px;
     font-size: 13px;
     padding: 0vw 21vw;
+}
+
+
+
+
+/* For Responsive Design */
+
+
+
+@media (max-width: 769px) {
+    #page1 h1{
+    font-size: 80px;
+    text-align: left;
+    padding-left: 1.2rem;
+    line-height: 1;
+    letter-spacing: 0.1rem;
+    } 
+    #cart{
+        width: 6rem;
+    }
+    #cart i{
+        font-size: 22px;
+    }
+    .logo svg{
+        height: 60px;
+        top: 80%;
+        left: 13%;
+        transform: translate(-50%,-50%);
+    }
+    #nav2{
+        width: 5vw;
+        height: 70px;
+    }
+    #nav-part2{
+        opacity: 0;
+    }
+    #page2{
+        width: 100vw;
+        height: 65vh;
+    }
+    #page2 img{
+        width: 80vw;
+        height: 60vh;
+    }
+    .good{
+        width:90vw;
+        height: 3.5vh;
+    }
+    .good h5{
+        font-size: 1.2rem ;
+        padding-bottom: 1.3rem;
+    }
+    #frames{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1.5rem;
+    }
+    .rec{
+        width:90vw;
+    }
+    .elem2{
+        width: 10vw;
+        height: 10vh;
+    }
+    .elem2 img{
+        width: 30vw;
+        height: 35vw;
+        margin-top: 1.5rem;
+    }
+    #info{
+        width: 100vw;
+        height: 100vh;
+        flex-direction: column;
+        gap: 1.5rem;
+    }
+    #left{
+        text-align: center;
+        width: 95vw;
+        height: 100vh;
+    }
+    #left h1{
+        font-size: 16vw;
+    }
+    #right{
+        width: 100vw;
+        height: 100vh;
+    }
+    #right h3{
+        font-size: 4vw;
+    }
+    #page4{
+        margin-bottom: 10vh;
+        margin-top: 50vh;
+    }
+    .product{
+        width: 100vw;
+        height: 60vh;
+        margin-top: 0vh;
+        padding: 0px 50px;
+    }
+    .first{
+        width: 50vw;
+        height: 50vh;
+    }
+    .first img{
+        height: 50vw;
+    }
+    .first h1{
+        text-align: center;
+    }
+    .second{
+        width: 50vw;
+        height: 50vh;
+    }
+    .second img{
+        height: 50vw;
+    }
+    #page5 h4{
+        width: 35vw;
+        font-size: 0.9rem ;
+        margin-top: -1.5rem;
+    }
+    #feature{
+        width: 95vw;
+        padding-left: 20px;
+        gap: 20px;
+    }
+    .dets h5{
+        font-size: 3.5vw;
+    }
+    .business{
+        width: 100vw;
+        padding: 0px 10px;
+    }
+    .business h1{
+        font-size: 55px;
+    }
+    .business h2{
+        font-size: 1.5rem;
+        padding: 0px 10px;
+        line-height: 1.2;
+    }
+    #impact{
+        width: 100vw;
+        height: 100vh;
+        flex-direction: column;
+        gap: 20px;
+    }
+    .our{
+        width: 90vw;
+        padding: 0px 10px;
+    }
+    .images{
+        width: 100vw;
+        padding: 0px 0px;
+    }
+    .images img{
+        width: 50vw;
+        height: 30vh;
+    }
+    #email h1{
+        font-size: 0.9rem;
+    }
+    #about{
+        width: 100vw;
+        text-align: center;
+        flex-direction: column;
+        gap: 4rem;
+    }
+    .contact h1{
+        font-size: 1rem;
+    }
+    .contact h2{
+        font-size: 1.5rem;
+    }
+    #about svg{
+        margin-left: 30%;
+        width: 40%;
+    }
+    .faq{
+        text-align: center;
+        margin-bottom: 5rem;
+    }
+    .faq h1{
+        font-size: 1rem;
+        text-align: center;
+    }
+    .faq h2{
+        font-size: 1.5rem;
+    }
+    .term h5{
+        font-size: 0.7rem;
+    }
+    #page7 p{
+        font-size: 0.9rem;
+        padding: 0vw 10vw;
+        margin-bottom: 2rem;
+        margin-top: 50px;
+    }
 }
